--- a/VAT/btwReport/ch.banana.nl.app.btw.declaration.report.css
+++ b/VAT/btwReport/ch.banana.nl.app.btw.declaration.report.css
@@ -1,8 +1,8 @@
 @page {
-    margin-top: 10mm;
-    margin-bottom: 10mm;
-    margin-left: 10mm;
-    margin-right: 10mm;
+    margin-top: 5mm;
+    margin-bottom: 5mm;
+    margin-left: 5mm;
+    margin-right: 5mm;
 }
 
 body {
@@ -36,4 +36,7 @@ table {
 .styleTableTitle{
     text-align: right;
     font-weight: bold;
+}
+.styleFinalParagraphs{
+    font-size: 8pt;
 }
