Update BTW report Netherland

--- a/VAT/btwReport/ch.banana.nl.app.btw.evaluation.report.css
+++ b/VAT/btwReport/ch.banana.nl.app.btw.evaluation.report.css
@@ -17,6 +17,11 @@ table {
     border-color: rgb(0, 0, 0);
 }
 
+table.reportTable td {
+    border-style: solid;
+    border-color: rgb(0, 0, 0);
+}
+
 .styleNormalHeader{
     text-align: right;
 }
