Update BTW report Netherland
-rename better some file
-creates .sbaa package
-update scripts
-create test file (still empty)

--- a/VAT/VatReport/ch.banana.nl.app.vat.report.css
+++ b/VAT/VatReport/ch.banana.nl.app.vat.report.css
@@ -17,7 +17,7 @@ table {
     border-color: rgb(0, 0, 0);
 }
 
-table.reportTable td {
+table.evaluationTable td {
     border-style: solid;
     border-color: rgb(0, 0, 0);
 }
@@ -33,7 +33,6 @@ table.reportTable td {
 
 .styleAmount {
     text-align: right;
-    background-color: aliceblue;
 }
 .styleRubriekTitle{
     font-weight: bold;
