Update BTW report Netherland
-update extension
-update code review
-create tests for each extension

--- a/VAT/VatReport/ch.banana.nl.app.vat.report.css
+++ b/VAT/VatReport/ch.banana.nl.app.vat.report.css
@@ -34,6 +34,10 @@ table.evaluationTable td {
 .styleAmount {
     text-align: right;
 }
+.styleAmount.styleAmount_decl {
+    text-align: right;
+    background-color: aliceblue;
+}
 .styleRubriekTitle{
     font-weight: bold;
 }
