--- a/VAT/VatReport/ch.banana.nl.app.vat.report.css
+++ b/VAT/VatReport/ch.banana.nl.app.vat.report.css
@@ -17,7 +17,7 @@ table {
     border-color: rgb(0, 0, 0);
 }
 
-table.evaluationTable td {
+table.periodsTable td {
     border-style: solid;
     border-color: rgb(0, 0, 0);
 }
