--- a/VAT/VatReport/ch.banana.nl.app.vat.report.css
+++ b/VAT/VatReport/ch.banana.nl.app.vat.report.css
@@ -17,7 +17,7 @@ table {
     border-color: rgb(0, 0, 0);
 }
 
-table.periodsTable td {
+table.overviewTable td {
     border-style: solid;
     border-color: rgb(0, 0, 0);
 }
@@ -34,17 +34,26 @@ table.periodsTable td {
 .styleAmount {
     text-align: right;
 }
-.styleAmount.styleAmount_decl {
+
+.styleAmount.styleAmount_statement {
     text-align: right;
     background-color: aliceblue;
 }
-.styleRubriekTitle{
+
+.styleTotals{
     font-weight: bold;
 }
+
+.styleTotals.styleRubriekTitle{
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+}
+
 .styleQuarters{
     text-align: center;
     font-weight: bold;
 }
+
 .styleFinalParagraphs{
     font-size: 8pt;
 }
